fix for misalignment [APPBUG-1158]
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@21362 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/freshdirect.css
+++ b/projects/Media/docroot/assets/css/common/freshdirect.css
@@ -123,6 +123,7 @@ h2.centerline span {
   white-space: nowrap;
   display: inline-block;
   font-size:0;
+	vertical-align:middle;
 }
 
 .qtyinput_grocery {
@@ -168,6 +169,7 @@ h2.centerline span {
 
 .qtyinput .qtymessage {
   font-weight: bold;
+	vertical-align:middle;
 }
 
 #vieworder_table select,
